Organisation des pages et components *.razor

--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -12,41 +12,23 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
-        </div>
+       </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="todo">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> ToDoList
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="comptecourant">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> CC
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="input">
-                <span class="bi bi-database-add-nav-menu" aria-hidden="true"></span> Importer fichiers
+            <NavLink class="nav-link" href="/dashboardcomptecourant">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dashboard CC
             </NavLink>
         </div>
         
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="operationseditor">
+            <NavLink class="nav-link" href="/operationseditor">
                 <span class="bi bi-bank" aria-hidden="true"></span> Editer les opérations
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/importfile">
+                <span class="bi bi-database-add-nav-menu" aria-hidden="true"></span> Importer fichiers
             </NavLink>
         </div>
     </nav>
