--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -27,6 +27,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/statsdb">
+                <span class="bi bi-database-add-nav-menu" aria-hidden="true"></span> Stats BDD
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/importfile">
                 <span class="bi bi-database-add-nav-menu" aria-hidden="true"></span> Importer fichiers
             </NavLink>
